Crash in debug build when deleting object #108745

Closed
opened 2023-06-08 11:34:15 +02:00 by Pratik Borhade · 2 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 532.03

Blender Version
Broken: 4.0, 40473db5993d90e5d3a6139e724f17d8758440fa

Seems this is caused by 67193e4e32

Short description of error
In debug build, crash triggers when deleting object due to accessing garbage memory (EnumPropertyItem).

Exact steps for others to reproduce the error

  1. Start debug build.
  2. Press X to invoke the delete pop-up panel.
  3. Click delete.
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 532.03 **Blender Version** Broken: 4.0, `40473db5993d90e5d3a6139e724f17d8758440fa` Seems this is caused by 67193e4e32bc6b6ecce0b7b7a5a4041fce07ce3c **Short description of error** In debug build, crash triggers when deleting object due to accessing garbage memory (`EnumPropertyItem`). **Exact steps for others to reproduce the error** 1. Start debug build. 2. Press X to invoke the `delete` pop-up panel. 3. Click `delete`.
Pratik Borhade added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-06-08 11:34:16 +02:00
Iliya Katushenock added the
Interest
User Interface
label 2023-06-08 12:04:35 +02:00
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-08 13:45:30 +02:00
Member

Can confirm, not an issue in 3.6

Can confirm, not an issue in 3.6
Philipp Oeser added the
Module
User Interface
label 2023-06-08 13:45:51 +02:00
Member

Seems this is caused by 67193e4e32

CC @Harley
CC @guishe

Seems this is caused by 67193e4e32bc6b6ecce0b7b7a5a4041fce07ce3c CC @Harley CC @guishe
Philipp Oeser added
Priority
High
and removed
Interest
User Interface
Priority
Normal
labels 2023-06-08 14:49:38 +02:00
Harley Acheson self-assigned this 2023-06-08 16:41:42 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-08 17:19:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108745
No description provided.