Fix #108745: Crash in debug build when deleting object

`totitem_added` should be used instead to add `RNA_enum_item_end`

Pull Request: https://projects.blender.org/blender/blender/pulls/108762